@@ -58,6 +58,7 @@
             Bangle.js: Save RAM in GPS handling, allow arbitrary length data returned (fix #1843)
             Tensorflow updated to current 'master' version
             Bangle.js: Improve SPI flash speed by with specific function for reading and keeping CS asserted (fix #1849)
+	    Bangle.js: Remove spiFlashReadWrite function
 
      2v05 : Add Array.includes
             Fix (Number.toFixed) rounding, eg (1234.505).toFixed(2)
